--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,54 +1,11 @@
-name: CI
-
-on:
-  push:
-    branches: ["**"]
-
+name: Test Python Setup
+on: [push]
 jobs:
-  build:
+  test:
     runs-on: ubuntu-24.04
-
-    services:
-      postgres:
-        image: postgres:14
-        env:
-          POSTGRES_PASSWORD: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
-    env:
-      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
-      PYTHONPATH: /app
-
     steps:
       - uses: actions/checkout@v3
-
-      - name: List files
-        run: ls -R
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.10
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run tests
-        env:
-          PYTHONPATH: /app
-        run: python -m pytest tests
-
-      - name: Archive logs
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: logs
-          path: logs
+          python-version: '3.11'
+      - run: python --version
